<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/title"
                    android:layout_width="307dp"
                    android:layout_height="153dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:src="@drawable/lgsewain_day"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ly1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/manropebold"
                        android:text="Register"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/fullname"
                        android:textSize="12dp"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/email"
                        android:textSize="12dp"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/password"
                        android:textSize="12dp"
                        android:paddingLeft="10dp"
                        android:inputType="textPassword"/>

                    <EditText
                        android:id="@+id/confirmpass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/manroperegular"
                        android:hint="@string/confirmpass"
                        android:textSize="12dp"
                        android:paddingLeft="10dp"
                        android:inputType="textPassword"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_R"
                    android:layout_width="270dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:paddingVertical="0dp"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:fontFamily="@font/manropebold"
                    android:textAlignment="center"
                    android:background="@drawable/border"
                    app:layout_constraintTop_toBottomOf="@id/ly1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/btn_R"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:text="Already have an account?"
                        android:fontFamily="@font/manroperegular"
                        android:textSize="12dp"/>

                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/manropebold"
                        android:textColor="@color/blue"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
