<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admintoko.VerfiyTokoActivity"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="onBackButtonClicked"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="Daftar Toko"
            android:textSize="20sp"
            android:fontFamily="@font/manropebold"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txt_verifikasi_register_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manropesemibold"
        android:text="Verifikasi Toko"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <ImageView
        android:id="@+id/img_ktp"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/addimage"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/gambarktp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_verifikasi_register_toko" />

    <TextView
        android:layout_width="215sp"
        android:layout_height="88sp"
        android:layout_marginStart="27sp"
        android:layout_marginEnd="64sp"
        android:fontFamily="@font/manroperegular"
        android:text="Mohon mengambil foto KTP-mu. Informasi di KTP harus terlihat jelas di foto-mu. Pastikan nama dan NIK sesuai dengan yang tertera pada KTP."
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_ktp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <LinearLayout
        android:id="@+id/ly3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/img_ktp"
        tools:layout_editor_absoluteX="0sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/manropesemibold"
            android:text="Nama Lengkap"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="198sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/manroperegular"
            android:hint="@string/reg_toko_nama_lengkap"
            android:paddingLeft="5sp"
            tools:layout_editor_absoluteX="0sp"
            tools:layout_editor_absoluteY="216sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/manropesemibold"
            android:text="Nomor Induk"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="198sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/manroperegular"
            android:hint="@string/nik"
            android:paddingLeft="5sp"
            tools:layout_editor_absoluteX="0sp"
            tools:layout_editor_absoluteY="216sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_R"
        android:layout_width="270sp"
        android:layout_height="32sp"
        android:layout_gravity="center"
        android:paddingVertical="0sp"
        android:layout_marginTop="15sp"
        android:text="Selesai"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/manropebold"
        android:textAlignment="center"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@id/ly3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>