<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="293sp"
        android:layout_height="150sp"
        android:layout_marginTop="96sp"
        android:contentDescription="@string/title"
        android:src="@drawable/lgsewain_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_margin="16sp"
        app:cardCornerRadius="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ly1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/manropeextrabold"
                android:text="@string/welcome"
                android:layout_marginBottom="10sp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:fontFamily="@font/manropesemibold"
                android:text="Email Address"
                android:layout_marginStart="7sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/border"
                android:fontFamily="@font/manroperegular"
                android:hint="Enter Your Email"
                android:textSize="12sp"
                android:layout_marginBottom="10sp"
                android:paddingStart="10sp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:fontFamily="@font/manropesemibold"
                android:text="Password"
                android:layout_marginStart="7sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/border"
                android:fontFamily="@font/manroperegular"
                android:hint="Password"
                android:textSize="12sp"
                android:paddingStart="10sp"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_gravity="end"
                android:layout_marginTop="10sp"
                android:id="@+id/forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/manroperegular"
                android:text="@string/forger_password"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_L"
                android:layout_width="270sp"
                android:layout_height="42sp"
                android:background="@drawable/border"
                android:fontFamily="@font/manropebold"
                android:paddingVertical="0sp"
                android:text="Login"
                android:layout_marginBottom="25sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly1" />

            <LinearLayout
                android:id="@+id/ly2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_L">

                <ImageView
                    android:layout_marginEnd="10sp"
                    android:src="@drawable/search"
                    android:layout_width="30sp"
                    android:layout_height="30sp"/>

                <ImageView
                    android:layout_marginStart="10sp"
                    android:src="@drawable/facebook"
                    android:layout_width="30sp"
                    android:layout_height="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manroperegular"
                    android:paddingBottom="5sp"
                    android:text="Not have an account?"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:fontFamily="@font/manropesemibold"
                    android:paddingBottom="5sp"
                    android:text="Sign Up"
                    android:textColor="@color/blue" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
